--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spring Lake Farms LLC</title>
-    <link href="grids.css" rel="stylesheet" />
+    <link href="flex.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
@@ -21,18 +21,19 @@
             </ul>
         </nav>
     </header>
-
-    <article class="leftText">
-        <p><strong>Welcome to Spring Lake Farms LLC</strong>
-            Nestled in the heart of Stanton, Michigan, Spring Lake Farms is a fourth generation dairy farm dedicated to providing the highest quality products, 
-            fostering sustainable farming practices, and connecting with our community. 
-            Our farm is home to happy, healthy cows, fresh local produce, and a team that is passionate about agriculture and family traditions. 
-            Explore our site to learn more about our farm, our cows, and the love that goes into every part of what we do!
-        </p>
-    </article>
-    <aside>
-        <img id="calf" src="calf_close_up.jpg" alt="calf" />
-    </aside>
+    <div class="content">
+        <article class="leftText">
+            <p><strong>Welcome to Spring Lake Farms LLC</strong>
+                Nestled in the heart of Stanton, Michigan, Spring Lake Farms is a fourth generation dairy farm dedicated to providing the highest quality products, 
+                fostering sustainable farming practices, and connecting with our community. 
+                Our farm is home to happy, healthy cows, fresh local produce, and a team that is passionate about agriculture and family traditions. 
+                Explore our site to learn more about our farm, our cows, and the love that goes into every part of what we do!
+            </p>
+        </article>
+        <aside>
+            <img id="calf" src="calf_close_up.jpg" alt="calf" />
+        </aside>
+    </div>
     <footer>
         <h1>Follow Us</h1>
         <nav class="footerNav">
