edited layout of header/footer

--- a/home.html
+++ b/home.html
@@ -1,5 +1,3 @@
-<!-- HTML Structure for the front page of a basic website of a family farm-->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,8 +12,8 @@
         <img src="farm_rainbow.jpg" alt="Spring Lake Farms" />
         <nav class="horizontalNav">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Our Cows</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
