--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
         </aside>
     </div>
     <footer>
-        <h1>Follow Us</h1>
+        <h1>Follow Us!</h1>
         <nav class="footerNav">
             <ul>
                 <li id="facebook">
