--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Spring Lake Farms</title>
     <link href="style.css" rel="stylesheet" />
+    <link href="mobile.css" rel="stylesheet" media="only screen and (max-width: 600px)" />
+
 </head>
 <body>
     <header>
