--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spring Lake Farms LLC</title>
-    <link href="flex.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
+    <link href="mobile.css" rel="stylesheet" media="only screen and (max-width: 600px)" />
 </head>
 <body>
     <header>
