--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <h1 class="aboutHead">About Spring Lake Farms</h1>
         <div class="history">
         <h1 id="Ourhistory">Our History</h2>
-            <p>Founded in 1920 by Allen Hardy, our farm has grown from less than 10 cows to nearly 500 today. Now spanning an impressive 800 acres, 
+            <p>Founded in 1920 by Bill Hardy, our farm has grown from less than 10 cows to nearly 500 today. Now spanning an impressive 800 acres, 
                 Spring Lake Farms is proudly managed by the fourth generation of the Hardy family, Bill and Jason Hardy. 
                 With a commitment to quality and sustainability, we milk 180 cows twice a day, producing an astounding 2,000 gallons 
                 of milk daily. Our milk is carefully collected and sold to local dairies, where it is transformed into delicious cheeses that our community enjoys.</p>
