--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="farm_rainbow.jpg" alt="Spring Lake Farms" />
         <nav class="horizontalNav">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="#">Our Cows</a></li>
                 <li><a href="#">Contact Us</a></li>
