--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#">Our Cows</a></li>
+                <li><a href="cows.html">Our Cows</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </nav>
