Add content to cows page

--- a/cows.html
+++ b/cows.html
@@ -23,25 +23,30 @@
     <section class="cows">
         <h1 class="cowsHead">Our Cows</h1>
         <div class="holstein">
-            <p>Holstein cows are the backbone of our dairy farm, known for their distinctive black-and-white markings and exceptional milk production. 
-                They are the most common dairy breed in the United States, and for good reason—Holsteins produce more milk than any other dairy breed!</p>
-            <img src="cows_sky.jpg" alt="Holstein Cows" id="holsteinPic" />
-            <h2 id="holsteinCharacteristics">Key Characteristics of Holsteins:</h2>
-            <ul>
-                <li><strong>Appearance:</strong> Holsteins are easily recognized by their iconic black-and-white or sometimes red-and-white coat. 
-                    They are the largest of the dairy breeds, typically weighing between 1,500 and 1,800 pounds when fully grown.</li>
-                <li><strong>Milk Production:</strong> Holsteins are famous for their high milk yield, producing an average of around 
-                    23,000 pounds of milk per year, which is equivalent to about 2,674 gallons! The milk they produce is also known for being lower 
-                    in butterfat compared to other breeds, making it ideal for fluid milk consumption.</li>
-                <li><strong>Temperament:</strong> Holsteins are known for being gentle giants. They have a calm and friendly demeanor, making them a great fit for a farm environment.</li>
-                <li><strong>Lifespan:</strong> A typical Holstein cow can live for up to 6 years, though with proper care, they may live even longer. 
-                    Many of our Holsteins have become beloved members of our farm family!</li>
-            </ul>
-            <img src="cow_life_cycle.jpg" alt="Life Cycle of Cow" id="lifeCycleImage" />
-            
-            <h2>Why We Love Our Holsteins</h2>
+            <div class="cowInfo">
+                <p>Holstein cows are the backbone of our dairy farm, known for their distinctive black-and-white markings and exceptional milk production. 
+                    They are the most common dairy breed in the United States, and for good reason—Holsteins produce more milk than any other dairy breed!</p>
+                <img src="cows_sky.jpg" alt="Holstein Cows" id="holsteinPic" />
+            </div>
+            <div class="characteristics">
+                <h2 id="characteristicsHead">Key Characteristics of Holsteins:</h2>
+                <ul id="charList">
+                    <li><strong>Appearance:</strong> Holsteins are easily recognized by their iconic black-and-white or sometimes red-and-white coat. 
+                        They are the largest of the dairy breeds, typically weighing between 1,500 and 1,800 pounds when fully grown.</li>
+                    <li><strong>Milk Production:</strong> Holsteins are famous for their high milk yield, producing an average of around 
+                        23,000 pounds of milk per year, which is equivalent to about 2,674 gallons! The milk they produce is also known for being lower 
+                        in butterfat compared to other breeds, making it ideal for fluid milk consumption.</li>
+                    <li><strong>Temperament:</strong> Holsteins are known for being gentle giants. They have a calm and friendly demeanor, making them a great fit for a farm environment.</li>
+                    <li><strong>Lifespan:</strong> A typical Holstein cow can live for up to 6 years, though with proper care, they may live even longer. 
+                        Many of our Holsteins have become beloved members of our farm family!</li>
+                </ul>
+                <img src="cow_life_cycle.jpg" alt="Life Cycle of Cow" id="lifeCycleImage" />
+            </div>
+            <div class="holsteinLove">
+            <h1>Why We Love Our Holsteins</h1>
             <p>At our farm, Holsteins aren't just milk producers—they're an essential part of our team. They enjoy grazing in our pastures, lounging in the barn, 
                 and receiving plenty of care and attention. We ensure they have a healthy diet and regular veterinary check-ups to keep them in top shape.</p>
+            </div>
         </div>
     </section>
     <footer>
