--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Spring Lake Farms LLC</title>
     <link href="style.css" rel="stylesheet" />
     <link href="mobile.css" rel="stylesheet" media="only screen and (max-width: 600px)" />
+    <script src="milk.js" defer></script>
 </head>
 <body>
     <header>
@@ -18,6 +19,7 @@
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </nav>
+        <p id="milkingCountdown"></p>
     </header>
     <div class="content">
         <article class="leftText">
