--- a/cows.html
+++ b/cows.html
@@ -6,6 +6,7 @@
     <title>About Spring Lake Farms</title>
     <link href="style.css" rel="stylesheet" />
     <link href="mobile.css" rel="stylesheet" media="only screen and (max-width: 600px)" />
+    <script src="milk.js" defer></script>
 
 </head>
 <body>
