--- a/about.html
+++ b/about.html
@@ -17,7 +17,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="cows.html">Our Cows</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contact.html
+                    ">Contact Us</a></li>
             </ul>
         </nav>
     </header>
