--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spring Lake Farms LLC</title>
+    <title>About Spring Lake Farms</title>
     <link href="style.css" rel="stylesheet" />
     <link href="mobile.css" rel="stylesheet" media="only screen and (max-width: 600px)" />
     <script src="milk.js" defer></script>
+
 </head>
 <body>
     <header>
@@ -19,21 +20,36 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <p id="milkingCountdown"></p>
     </header>
-    <div class="content">
-        <article class="leftText">
-            <p><strong>Welcome to Spring Lake Farms LLC</strong>
-                Nestled in the heart of Stanton, Michigan, Spring Lake Farms is a fourth generation dairy farm dedicated to providing the highest quality products, 
-                fostering sustainable farming practices, and connecting with our community. 
-                Our farm is home to happy, healthy cows, fresh local produce, and a team that is passionate about agriculture and family traditions. 
-                Explore our site to learn more about our farm, our cows, and the love that goes into every part of what we do!
-            </p>
-        </article>
-        <aside>
-            <img id="calf" src="calf_close_up.jpg" alt="calf" />
-        </aside>
-    </div>
+    <section>
+        <h1>Contact Us</h1>
+        <p>For questions about any of our products or help with placing your order, don't hesitate to contact us.</p>
+        <form id="contact" action="#" method="post">
+            <fieldset id="custInfo">
+
+                <div class="formRow">
+                    <label for="Name">Name</label>
+                    <input name="custName" id="name" type="text" required>
+                </div>
+
+                <div class="formRow">
+                    <label for="Email">Email</label>
+                    <input name="custMail" id="Email" type="mail" required>
+                </div>
+
+                <div class="formRow">
+                    <label for="Phone">Phone</label>
+                    <input name="custPhone" id="Phone" type="tel" pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}" title="Please enter a valid phone number, e.g., 123-456-7890 or 1234567890." required>
+                </div>
+
+            </fieldset>
+
+            <div id="buttons">
+                <input type="submit" value="Submit" />
+                <input type="reset" value="Cancel" />
+             </div>
+        </form>
+    </section>
     <footer>
         <h1>Follow Us!</h1>
         <nav class="footerNav">
