--- a/contact.html
+++ b/contact.html
@@ -35,33 +35,38 @@
         <p>For questions about any of our products or help with placing your order, don't hesitate to contact us.</p>
         <form id="contact" action="#" method="post">
             <fieldset id="custInfo">
+                <div id="topForm">
+                    <div class="formRow">
+                        <label for="Name">Full Name</label>
+                        <input name="custName" id="Name" type="text" required>
+                    </div>
 
-                <div class="formRow">
-                    <label for="Name">Name</label>
-                    <input name="custName" id="Name" type="text" required>
+                    <div class="formRow">
+                        <label for="Email">Email</label>
+                        <input name="custMail" id="Email" type="mail" required>
+                    </div>
+
+                    <div class="formRow">
+                        <label for="Phone">Phone</label>
+                        <input name="custPhone" id="Phone" type="tel" pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}" title="Please enter a valid phone number, e.g., 123-456-7890 or 1234567890." maxlength="16" required>
+                    </div>
+
                 </div>
+                <div id="bottomForm">
 
-                <div class="formRow">
-                    <label for="Email">Email</label>
-                    <input name="custMail" id="Email" type="mail" required>
-                </div>
-
-                <div class="formRow">
-                    <label for="Phone">Phone</label>
-                    <input name="custPhone" id="Phone" type="tel" pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}" title="Please enter a valid phone number, e.g., 123-456-7890 or 1234567890." required>
-                </div>
-
-                <div class="formRow fullWidth">
-                    <label for="Message">Message</label>
-                    <textarea name="custMsg" id="Message" type="text" required></textarea>
+                    <div class="formRow fullWidth">
+                        <label for="Message">Message</label>
+                        <textarea name="custMsg" id="Message" type="text" required></textarea>
+                    </div>
                 </div>
 
             </fieldset>
 
             <div id="buttons">
-                <input type="submit" value="Submit" />
-                <input type="reset" value="Cancel" />
+                <input type="submit" value="Submit" id="submitButton"/>
+                <input type="reset" value="Cancel" id="resetButton"/>
              </div>
+
         </form>
     </section>
     <footer>
