Created recipes page and added one.

--- a/cows.html
+++ b/cows.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Spring Lake Farms</title>
+    <title>Spring Lake Farms Cows</title>
     <link href="style.css" rel="stylesheet" />
     <link href="mobile.css" rel="stylesheet" media="only screen and (max-width: 600px)" />
     <script src="javaMenu.js" defer></script>
@@ -26,6 +26,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="cows.html">Our Cows</a></li>
+                <li><a href="recipes.html">Recipes</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
