--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="cows.html">Our Cows</a></li>
+                <li><a href="recipes.html">Recipes</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
