Added 2 more recipe cards

--- a/recipes.html
+++ b/recipes.html
@@ -34,28 +34,127 @@
     <main>
         <section id="recipesSection">
             <h2>Featured Recipes</h2>
-            <div class="recipe" id="butterRecipe">
-                <img src="homemade_butter.jpg" alt="homemade butter" id="butterPic">
-                <h3>Homemade Butter</h3>
-                <p class="recipeDiscription">Discover the joy of making rich, creamy butter from scratch using just two simple 
-                    ingredients—fresh cream and a little salt. Perfect for spreading on warm bread, baking, or adding a touch of homemade flavor to your favorite dishes. 
-                    This recipe is a delightful way to appreciate the freshness of dairy straight from the farm!</p>
-                <h4><strong>Ingredients:</strong></h4>
-                <ul class="ingredients" id="butterIngredients">
-                    <li>Fresh cream from <i>Spring Lake Farms</i></li>
-                    <li>Salt (optional).</li>
-                </ul>
-                <h4><strong>Instructions:</strong></h4>
-                <ol class="instructions" id="butterInstructions">
-                    <li>Add the cream to an electric mixer. Start whipping the cream on low speed until it thickens slightly.</li>
-                    <li>Gradually increase the mixer speed to medium-high and continue to whip for 5-7 minutes, 
-                        scraping down the sides every now and then. Continue mixing past the whipped cream phase, 
-                        and you'll see the cream begin to break into butter (fat molecules) and liquid (buttermilk).</li>
-                    <li>Remove the butter from the mixer (save the buttermilk for use later!) and squeeze out any excess moisture by repeatedly squeezing the butter through your hands.</li>
-                    <li>Quickly rinse the butter under ice cold water and add salt to taste.</li>
-                    <li>Store in either an air-tight container or rolled up in parchment paper. Keep it in the fridge and use within 10-14 days.</li>
-                </ol>
+            <div class="recipeCard" id="butterRecipe">
+                <div class="recipeHeader">
+                    <img src="homemade_butter.jpg" alt="homemade butter" id="butterPic">
+                    <h3>Homemade Butter</h3>
+                    <p class="servings">Servings: 16 tablespoons</p>
+                    <p class="recipeDiscription">Discover the joy of making rich, creamy butter from scratch using just two simple 
+                        ingredients—fresh cream and a little salt. Perfect for spreading on warm bread, baking, or adding a touch of homemade flavor to your favorite dishes. 
+                        This recipe is a delightful way to appreciate the freshness of dairy straight from the farm!</p>
+                </div>
+
+                <div class="recipeContent">
+
+                    <h4><strong>Ingredients:</strong></h4>
+                    <ul class="ingredients" id="butterIngredients">
+                        <li>Fresh cream from <i>Spring Lake Farms</i></li>
+                        <li>Salt (optional).</li>
+                    </ul>
+
+                    <h4><strong>Instructions:</strong></h4>
+                    <ol class="instructions" id="butterInstructions">
+                        <li>Add the cream to an electric mixer. Start whipping the cream on low speed until it thickens slightly.</li>
+                        <li>Gradually increase the mixer speed to medium-high and continue to whip for 5-7 minutes, 
+                            scraping down the sides every now and then. Continue mixing past the whipped cream phase, 
+                            and you'll see the cream begin to break into butter (fat molecules) and liquid (buttermilk).</li>
+                        <li>Remove the butter from the mixer (save the buttermilk for use later!) and squeeze out any excess moisture by repeatedly squeezing the butter through your hands.</li>
+                        <li>Quickly rinse the butter under ice cold water and add salt to taste.</li>
+                        <li>Store in either an air-tight container or rolled up in parchment paper. Keep it in the fridge and use within 10-14 days.</li>
+                    </ol>
+
+                    <h4><strong>Notes:</strong></h4>
+                    <ul class="notes">
+                        <li> During the butter-making process, both the cream and the bowl must be cold so that the fat can split quickly and the butter can be smooth. 
+                            Keep this in mind when you are whipping the cream, as the cream will get warmer when being whipped at high speed.</li>
+                        <li>You can use either a hand or stand mixer, or even a blender/ food processor.</li>
+                    </ul>
+                </div>
             </div>
 
+            <div class="recipeCard" id="hotChocolateRecipe">
+
+                <div class="recipeHeader">
+                    <img src="hot_chocolate.jpg" alt="hot chocolate" id="hotChocolatePic">
+                    <h3>The Very Best Hot Chocolate</h3>
+                    <p class="servings">Servings: 4</p>
+                    <p class="recipeDiscription">An amazingly delicious and satisfying homemade hot chocolate, and at a fraction of the cost of specialty coffee shops. 
+                        Made of course with high-quality 100% Spring Lake Farms Milk!</p>
+                </div>
+
+                <div class="recipeContent">
+
+                    <h4><strong>Ingredients:</strong></h4>
+                    <ul class="ingredients" id="hotChocolateIngredients">
+                        <li>3 cups (750 mL) fresh Milk from <i>Spring Lake Farms</i></li>
+                        <li>1 cup (250 mL) fresh (or store bought) cream</li>
+                        <li>1/4 cup (60 mL) sugar</li>
+                        <li>1/4 cup (60 mL) cocoa powder</li>
+                        <li>Pinch of salt</li>
+                        <li>1 tsp (5 mL) vanilla extract</li>
+                    </ul>
+
+                    <h4><strong>Instructions:</strong></h4>
+                    <ol class="instructions" id="hotChocolateInstructions">
+                        <li>In saucepan, heat 2-1/2 cups (625 mL) of Canadian milk and 3/4 cup (180 mL) of Canadian cream 
+                            over medium heat, stirring often, until steaming.</li>
+                        <li>Meanwhile, in bowl, whisk together sugar, cocoa and salt. Whisk in remaining 1/2 cup (125 mL) 
+                            cold milk and vanilla extract to make a smooth paste. Reduce heat to medium-low and gradually whisk 
+                            cocoa mixture into hot milk mixture until blended. Heat for about 2 min or until steaming hot.</li>
+                        <li>In small chilled bowl, using electric mixer or whisk; whip remaining cream until thick.</li>
+                        <li>Ladle hot chocolate into 4 warmed mugs. Dollop the whipped cream evenly into each mug; 
+                            stir to swirl lightly. Serve immediately.</li>
+                    </ol>
+
+                    <h4><strong>Notes:</strong></h4>
+                    <ul class="notes">
+                        <li>Stir regularly – Stir it regularly to avoid a skin from forming on the top.</li>
+                        <li>If you Want a Peppermint Version: add a couple drops of peppermint oil or extract with the milk and vanilla.</li>
+                        <li>For the Adventurous: Add 1 tbsp (15 mL) coffee- or chocolate-flavoured liqueur and/or 1/2 cup (125 mL) 
+                            strong hot coffee to each mug of hot chocolate before adding whipped cream.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="recipeCard" id="ricottaRecipe">
+
+                <div class="recipeHeader">
+                    <img src="ricotta.webp" alt="ricotta cheese" id="ricottaPic">
+                    <h3>Homemade Ricotta Cheese</h3>
+                    <p class="servings">Servings: 4</p>
+                    <p class="recipeDiscription">Homemade Ricotta Cheese is easy to make with ingredients you likely have on hand—no special tools 
+                        required. It's perfect for homemade pasta dishes and more!</p>
+                </div>
+
+                <div class="recipeContent">
+
+                    <h4><strong>Ingredients:</strong></h4>
+                    <ul class="ingredients" id="ricottaIngredients">
+                        <li>4 cups whole Milk from <i>Spring Lake Farms</i></li>
+                        <li>1/2 cup fresh (or store bought) cream</li>
+                        <li>1/4 teaspoon salt</li>
+                        <li>3 tablespoons white vinegar <span style="color: #7a7a7a; font-style: italic;">or lemon juice*</span></li>
+                    </ul>
+
+                    <h4><strong>Instructions:</strong></h4>
+                    <ol class="instructions" id="ricottaInstructions">
+                        <li>In a heavy-bottomed saucepan, heat milk, cream, and salt over medium heat while stirring. 
+                            Cook just until the mixture comes to a boil.</li>
+                        <li>Remove from the heat, add the vinegar, and stir to combine.</li>
+                        <li>Let the mixture rest undisturbed for 30 minutes to allow curds to form.</li>
+                        <li>Line a fine mesh strainer or colander with 2 layers of damp cheesecloth. 
+                            Gently spoon the ricotta curds into the strainer.</li>
+                            <li>Allow to drain for 30-45 minutes.</li>
+                    </ol>
+
+                    <h4><strong>Notes:</strong></h4>
+                    <ul class="notes">
+                        <li>You can use pasteurized milk, homogenized milk, and/or cream-line milk, but do not use ultra-pasteurized milk, as it will not work.</li>
+                        <li>Homemade ricotta cheese will last up to 3-4 days if stored in an airtight container in the fridge.</li>
+                        <li>*Distilled white vinegar creates the most neutral flavor, while lemon juice adds just a touch of lemony flavor; that can be good in some applications 
+                            (like, say, if you're dolloping the ricotta onto pancakes), but may not be desirable in others.</li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
