Mobile styles for recipes

--- a/recipes.html
+++ b/recipes.html
@@ -158,3 +158,19 @@
             </div>
         </section>
     </main>
+    <footer>
+        <h1>Follow Us!</h1>
+        <nav class="footerNav">
+            <ul>
+                <li id="facebook">
+                    <a href="https://www.facebook.com/profile.php?id=100054319639009" target="_blank" rel="noopener noreferrer"><img src="fbicon.png" alt="Facebook" /> Facebook</a>
+                </li>
+                <li id="instagram">
+                    <a href="https://www.instagram.com/spring_lake_farms/" target="_blank" rel="noopener noreferrer"><img src="instaicon.png" alt="Instagram" /> Instagram</a>
+                </li>
+            </ul>
+        </nav>
+        <address>
+            Spring Lake Farms &copy; 1920 All Rights Reserved
+        </address>
+    </footer>
