Slightly cleaned up about page

--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
     </header>
     <section class="about">
         <h1 class="aboutHead">About Spring Lake Farms</h1>
-        <div class="history">
-        <h1 id="Ourhistory">Our History</h2>
+        <div id="historyBox">
+        <h5 id="Ourhistory" style="font-weight: bold; font-size: 1.1em;">Our History</h5>
             <p>Founded in 1920 by Bill Hardy, our farm has grown from less than 10 cows to nearly 500 today. Now spanning an impressive 800 acres, 
                 Spring Lake Farms is proudly managed by the fourth generation of the Hardy family, Bill and Jason Hardy. 
                 With a commitment to quality and sustainability, we milk 180 cows twice a day, producing an astounding 2,000 gallons 
@@ -48,30 +48,34 @@
         
         <div class="owners">
             <h1 id="ownersHeader">Meet the Owners</h1>
-            <div id="billBio">
+
+            <div class="ownerBio" id="billBio">
                 <img src="bill_hardy.jpg" alt="Bill Hardy">
                 <div class="bioText">  
-                    <h1>Bill Hardy</h1>
+                    <h3>Bill Hardy</h3>
                     <p>Bill Hardy graduated from Michigan State University and plays a key role in managing the cows at Spring Lake Farms, 
                         focusing on milking and breeding. Bill's love for the outdoors is reflected in his hobbies, which include nature 
                         exploration, hunting trips, and fishing. He’s also a big fan of baseball and softball, both as a player and spectator. 
                         Bill is married to his wife, Jen, and they have two children.</p>
                 </div>
             </div>
-            <div id="jasonBio">
+
+            <div class="ownerBio" id="jasonBio">
                 <div class="bioText">
-                    <h1>Jason Hardy</h1>
+                    <h3>Jason Hardy</h3>
                     <p>Jason Hardy graduated from Michigan State University with a degree in Animal Science. 
                         He plays a key role in maintaining the farm, spending much of his time during the summer working in the fields and operating 
                         machinery. A true outdoorsman, Jason enjoys being close to nature and spends his free time hunting. 
                         He’s also a big fan of homemade apple pie. Jason is happily married to his wife, Jeri, 
                         and together they have five children, continuing the proud Hardy family tradition at Spring Lake Farms.</p>
-            </div>
+                </div>
                 <img src="jason_hardy.jpg" alt="Jason Hardy">
             </div>
+            
         </div>
-        <div class="farmLife">
-            <h1>A Day in the Life at Spring Lake Farms</h1>
+
+        <div id="farmLifeBox">
+            <h2>A Day in the Life at Spring Lake Farms</h2>
             <p>Each day at Spring Lake Farms begins before dawn, as we rise at 3 a.m. to start the first milking of our cows. 
                 The tranquility of the early morning hours sets the tone for our day as we ensure each cow is milked with care and precision. 
                 After the morning milking, we feed our cows, providing them with the nutrients they need to stay healthy and productive. 
@@ -79,6 +83,7 @@
                 In the afternoon, we prepare for the second milking session at 3 p.m., where we repeat the routine with dedication. 
                 Our commitment to our animals and our farm is unwavering, and each day is a blend of hard work, passion, and a deep respect for the land that sustains us.</p>
         </div>
+
     </section>
 </body>
 <footer>
