Cleaned up styles

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <section class="about">
         <h1 class="aboutHead">About Spring Lake Farms</h1>
         <div id="historyBox">
-        <h5 id="Ourhistory" style="font-weight: bold; font-size: 1.1em;">Our History</h5>
+        <h5 id="Ourhistory" style="font-weight: bold; font-size: 1.5em; text-align: center;">Our History</h5>
             <p>Founded in 1920 by Bill Hardy, our farm has grown from less than 10 cows to nearly 500 today. Now spanning an impressive 800 acres, 
                 Spring Lake Farms is proudly managed by the fourth generation of the Hardy family, Bill and Jason Hardy. 
                 With a commitment to quality and sustainability, we milk 180 cows twice a day, producing an astounding 2,000 gallons 
@@ -71,11 +71,11 @@
                 </div>
                 <img src="jason_hardy.jpg" alt="Jason Hardy">
             </div>
-            
+
         </div>
 
         <div id="farmLifeBox">
-            <h2>A Day in the Life at Spring Lake Farms</h2>
+            <h5>A Day in the Life at Spring Lake Farms</h5>
             <p>Each day at Spring Lake Farms begins before dawn, as we rise at 3 a.m. to start the first milking of our cows. 
                 The tranquility of the early morning hours sets the tone for our day as we ensure each cow is milked with care and precision. 
                 After the morning milking, we feed our cows, providing them with the nutrients they need to stay healthy and productive. 
