Added form to recipes page and fixed mobile styles

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,13 @@
     <title>Contact Spring Lake Farms</title>
     <link href="style.css" rel="stylesheet" />
     <link href="mobile.css" rel="stylesheet" media="only screen and (max-width: 600px)" />
+    <style>
+        #contact label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+    </style>
     <script src="javaMenu.js" defer></script>
 
 </head>
@@ -44,7 +51,7 @@
 
                     <div class="formRow">
                         <label for="Email">Email</label>
-                        <input name="custMail" id="Email" type="mail" required>
+                        <input name="custMail" id="Email" type="email" required>
                     </div>
 
                     <div class="formRow">
