--- a/about.html
+++ b/about.html
@@ -33,6 +33,8 @@
     </header>
     <section class="about">
         <h1 class="aboutHead">About Spring Lake Farms</h1>
+
+        <!-- History section -->
         <div id="historyBox">
         <h5 id="Ourhistory" style="font-weight: bold; font-size: 1.5em; text-align: center;">Our History</h5>
             <p>Founded in 1920 by Bill Hardy, our farm has grown from less than 10 cows to nearly 500 today. Now spanning an impressive 800 acres, 
@@ -45,10 +47,11 @@
                 strong relationships within our community, and providing the freshest, highest-quality dairy products possible.</p>
         </div>
 
-        
+        <!-- Owners' bios section -->
         <div class="owners">
             <h1 id="ownersHeader">Meet the Owners</h1>
 
+            <!-- Bio for Bill Hardy -->
             <div class="ownerBio" id="billBio">
                 <img src="bill_hardy.jpg" alt="Bill Hardy">
                 <div class="bioText">  
@@ -60,6 +63,7 @@
                 </div>
             </div>
 
+            <!-- Bio for Jason Hardy -->
             <div class="ownerBio" id="jasonBio">
                 <div class="bioText">
                     <h3>Jason Hardy</h3>
@@ -74,6 +78,7 @@
 
         </div>
 
+        <!-- Day in the Life section -->
         <div id="farmLifeBox">
             <h5>A Day in the Life at Spring Lake Farms</h5>
             <p>Each day at Spring Lake Farms begins before dawn, as we rise at 3 a.m. to start the first milking of our cows. 
@@ -86,6 +91,8 @@
 
     </section>
 </body>
+
+<!-- Footer section -->
 <footer>
     <h1>Follow Us!</h1>
     <nav class="footerNav">
