--- a/cows.html
+++ b/cows.html
@@ -33,6 +33,8 @@
     </header>
     <section class="cows">
         <h1 class="cowsHead">Our Cows</h1>
+
+        <!-- Holstein info section -->
         <div class="holstein">
             <div class="cowInfo">
                 <p>Holstein cows are the backbone of our dairy farm, known for their distinctive black-and-white markings and exceptional milk production. 
@@ -51,8 +53,11 @@
                     <li><strong>Lifespan:</strong> A typical Holstein cow can live for up to 6 years, though with proper care, they may live even longer. 
                         Many of our Holsteins have become beloved members of our farm family!</li>
                 </ul>
+                <!-- Illustration of the cow lifecycle -->
                 <img src="cow_life_cycle.jpg" alt="Life Cycle of Cow" id="lifeCycleImage" />
             </div>
+
+            <!-- Section on why the farm loves Holsteins -->
             <div class="holsteinLove">
             <h1>Why We Love Our Holsteins</h1>
             <p>At our farm, Holsteins aren't just milk producers—they're an essential part of our team. They enjoy grazing in our pastures, lounging in the barn, 
@@ -60,6 +65,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer section -->
     <footer>
         <h1>Follow Us!</h1>
         <nav class="footerNav">
