--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </nav>
         <p id="milkingCountdown"></p>
     </header>
+
     <div class="content">
+        <!-- Welcome section -->
         <article class="leftText">
             <p><strong>Welcome to Spring Lake Farms LLC</strong>
                 Nestled in the heart of Stanton, Michigan, Spring Lake Farms is a fourth generation dairy farm dedicated to providing the highest quality products, 
@@ -41,11 +43,15 @@
                 Explore our site to learn more about our farm, our cows, and the love that goes into every part of what we do!
             </p>
         </article>
+
+        <!-- Calf image -->
         <aside>
             <img id="calf" src="calf_close_up.jpg" alt="calf" />
         </aside>
     </div>
     <footer>
+
+        <!-- Footer section -->
         <h1>Follow Us!</h1>
         <nav class="footerNav">
             <ul>
